# dms

./: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: django.yml
dms/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  package-lock.json
frontend/public/: index.html
user/: models.py  serializers.py  urls.py  views.py
