[tool.poetry]
name = "dms"
version = "0.1.0"
description = ""
authors = ["KFung95 <Kevin.Fung.1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
pydantic = "1.10.13"
mihomo = {git = "https://github.com/KT-Yeh/mihomo.git"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
